@@ -1,7 +1,8 @@
 Revision history for Test-Class-Moose
 
 0.02
-        - Start moving statistics gathering into its own class
+        - Make sure we have hi-res time reporting
+        - Movestatistics gathering into its own classes
         - Add include/exclude test method filtering
         - Skip a test class if we don't find any test methods
         - Most attributes pushed into Test::Class::Moose::Config
